[gd_scene load_steps=2 format=3 uid="uid://bntrdv3lnmtii"]

[ext_resource type="Script" path="res://DifficultyMenu/difficulty_menu.gd" id="1_y4sf2"]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4sf2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Begginer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BEGINNER"

[node name="Intermediate" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INTERMEDIATE"

[node name="Advanced" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ADVANCED"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Begginer" to="." method="_on_begginer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Intermediate" to="." method="_on_intermediate_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Advanced" to="." method="_on_advanced_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
